--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ site-image: itm-square.png
 
 # Event Details
 event-title: 2020 TRB Innovations in Travel Modeling Conference
-event-date: June 2020
+event-date: June 14-17, 2020
 event-location: Seattle WA
 event-tagline: ''
 
