--- a/_data/program.yml
+++ b/_data/program.yml
@@ -14,7 +14,7 @@
     detail: technical presentations with formal critiques and discussions
   - time: 10:00 - 12:00
     name: Opening Plenary
-    detail: Welcome, keynote speaker, and 'best of' presentations
+    detail: Welcome, keynote speaker Robert Lempert, and 'best of' presentations
   - time: 12:00 - 1:30
     name: Lunch
     detail: "on your own"
